# harness_egineering

./: .gitignore  CLAUDE.md  CLAUDE_CODE_HARNESS_实践指南.md  HARNESS_ENGINEERING_实践指南.md  HARNESS_SKILLS_使用指南.md  README.md  RESEARCH_FINDINGS.md  RESEARCH_FINDINGS_zh.md  SESSION_2026-03-29.md  SESSION_2026-03-30.md  claude.sh  harness_engineering_research_report.md  harness_engineering_research_report_zh.md  install-skills.sh
.claude/skills/harness-plan/: SKILL.md
.claude/skills/harness-resume/: SKILL.md
.claude/skills/harness-review/: SKILL.md
harness_practice_demo/: .gitignore  CLAUDE.md  PRACTICE_REPORT.md  plan.md  pyproject.toml
harness_practice_demo/.harness/: weekly-review.md
harness_practice_demo/app/: auth.py  config.py  main.py
harness_practice_demo/app/api/: auth.py  tasks.py
harness_practice_demo/app/models/: task.py  user.py
harness_practice_demo/app/schemas/: task.py  user.py
harness_practice_demo/tests/: conftest.py  test_auth.py  test_tasks.py
logs/: .4e05e359251bca02925d5cf6d794479109281542-audit.json
memory_export/: MEMORY.md  feedback_chinese_output.md  project_harness_engineering.md  project_harness_skills.md  reference_key_sources.md  user_profile.md
skills/harness-init/: SKILL.md
skills/harness-plan/: SKILL.md
skills/harness-resume/: SKILL.md
skills/harness-review/: SKILL.md
